--- a/src/components/LoginForm/styles.scss
+++ b/src/components/LoginForm/styles.scss
@@ -1,5 +1,8 @@
 @import 'src/styles/vars';
-
+.container {
+  display: flex;
+  flex-direction: row;
+}
 .loginForm {
   height: 60vh;
   display: flex;
@@ -16,15 +19,29 @@
   &__button {
     align-self:center;
   }
+  &__imgContainer {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+  }
   &__container {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 2em;
+ 
   }
   &__error {
     margin-bottom: 1.5em;
+  }
+  &__image {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 }
 
@@ -38,6 +55,9 @@
     }
     &__button {
       align-self: flex-start;
+    }
+    &__imgContainer {
+      display: none;
     }
   }
 }
