--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -56,8 +56,8 @@
     text-align: center;
   }
   &__input {
-    width: 100%;
-
+    width: 40%;
+    align-self: center;
     margin: $gutter $gutter*.3;
     border: none;
     background-color:$light-brown;
@@ -91,7 +91,7 @@
   &__userInterface {
     flex-direction: column;
     justify-content: space-around;
-    padding-top: 5em;
+    padding-top: 7em;
     width: 100%;
     height: 100%;
   }
