--- a/src/components/SignupForm/SignupField/styles.scss
+++ b/src/components/SignupForm/SignupField/styles.scss
@@ -5,12 +5,15 @@
   position: relative;
   width: 60%;
   &__input {
-    width:100%;
+    background-color:$lightest-brown;
+    margin: auto;
+    width:80% !important;
     padding: .7em;
     font-size: 1em;
     border: none;
     border-radius: .3em;
     height: 2.5em;
+    color:$dark-grey;
    
   }
   &__input:focus {
@@ -55,8 +58,12 @@
 
 @media screen and (min-width: 450px) {
   .field{
-
-    width: 50%;
+    width: 60%;
     max-width: 300px;
+    &__input {
+    width: 100% !important;
+    color:$dark-grey;
+
+    }
   }
 }
