--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -53,7 +53,7 @@
     color: $dark-grey;
   }
   &__errorMessage {
-    width: 80%;
+    width: 50%;
     margin: 0 auto;
     text-align: center;
     font-size: 1.3em;
@@ -61,8 +61,22 @@
     background-color: $light-brown;
     border-radius: 20px;
     color: $dark-grey;
+    margin-bottom: 2em;
+    animation: warning 3s;
   }
 
+}
+
+@keyframes warning {
+  0%{
+    background-color: $light-brown;
+  }
+  50% {
+    background-color: red;
+  }
+  100% {
+    background-color: $light-brown;
+  }
 }
 
 @media screen and (max-width: 1050px) {
@@ -72,6 +86,7 @@
       font-size: 2em;
     }
     &__errorMessage {
+      width: 90%;
       padding: 1em;
     }
   }
